src/css/background-animations.css
#animationContainer {
    position: absolute;
    justify-content: center;
    align-items: center;
    border: 4px solid orange;
    width: 100%;
    height: 100vh;
    /* z-index: -1; */
    overflow-x: hidden;
}

#flowAnimation {
    /* border: 7px solid black; */
    position: absolute;
    justify-content: center;
    align-items: center;
    position: absolute;
    height: 600px;
    width: 100%;
    top: 300px;
    overflow: hidden;
    display: none;
    opacity: 0;
    animation-fill-mode: forwards;
    margin-top: -40px;
    transform: scaleY(0.95);
}

#sineWaveBack {
    height: 45%;
    position: absolute;
    margin-top: 30px;
    top: 200px;
    z-index: 0;
    opacity: 0.15;
    margin-left: 0px;
    margin-top: -35px;
    animation: slideBack 30s linear infinite;
}

#sineWaveFront {
    height: 60%;
    position: absolute;
    top: 150px;
    z-index: 0;
    opacity: 0.25;
    margin-left: 0px;
    margin-top: -35px;
    animation: slideFront 12s linear infinite;
}

@keyframes slideBack {
    0% {
        transform: translateX(0);
    }
    100% {
        transform: translateX(-380px);
    }
}

@keyframes slideFront {
    0% {
        transform: translateX(0);
    }
    100% {
        transform: translateX(-503px);
    }
}

@keyframes intoOpacityTransition {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

@keyframes outOfOpacityTransition {
    from {
        opacity: 1;
    }
    to {
        opacity: 0;
    }
}

.intoOpacityTransition {
    animation: intoOpacityTransition 6s;
}

.outOfOpacityTransition {
    animation: outOfOpacityTransition 0.5s;
}

#chillAnimation {
    position: absolute;
    display: none;
    justify-content: center;
    align-items: center;
    height: 580px;
    width: 100%;
    /* overflow: hidden; */
    opacity: 0;
    animation-fill-mode: forwards;
    margin-top: 50px;
    transform: scale(0.75);
    /* border: 3px solid cyan; */
    /* min-width: 1000px; */
}

#circleOuter {
    height: 800px;
    width: 800px;
    position: absolute;
    /* opacity: 0.05; */
    animation: circleOuterAnimation 6s linear infinite;
}

#circleMiddle {
    height: 600px;
    width: 600px;
    position: absolute;
    /* opacity: 0.05; */
    animation: circleMiddleAnimation 6s linear infinite;
}

#circleInner {
    height: 400px;
    width: 400px;
    position: absolute;
    /* opacity: 0.05; */
    animation: circleInnerAnimation 6s linear infinite;
}

@keyframes circleOuterAnimation {
    0% {
        opacity: 0.075;
        transform: scaleX(1.005) scaleY(1.005);
    }
    10% {
        transform: scaleX(1) scaleY(1);
        opacity: 0;
    }
    30% {
        opacity: 0.25;
    }
    50% {
        opacity: 0.25;
    }
    70% {
        opacity: 0.25;
        transform: scaleX(1) scaleY(1);
    }
    90% {
        opacity: 0.35;
        transform: scaleX(1.01) scaleY(1.01);
    }
    100% {
        opacity: 0.075;
        transform: scaleX(1.005) scaleY(1.005);
    }
}

@keyframes circleMiddleAnimation {
    0% {
        opacity: 0.15;
    }
    5% {
        opacity: 0.15;
    }
    30% {
        opacity: 0.15;
    }
    50% {
        opacity: 0.15;
        transform: scaleX(1) scaleY(1);
    }
    70% {
        opacity: 0.05;
        transform: scaleX(1.03) scaleY(1.03);
    }
    90% {
        opacity: 0;
        transform: scaleX(1) scaleY(1);
    }
    100% {
        opacity: 0.15;
    }
}

@keyframes circleInnerAnimation {
    0% {
        opacity: 0.05;
    }
    5% {
        opacity: 0.05;
    }
    30% {
        opacity: 0.05;
        transform: scaleX(1) scaleY(1);
    }
    50% {
        opacity: 0.15;
        transform: scaleX(1.05) scaleY(1.05);
    }
    70% {
        opacity: 0;
        transform: scaleX(1) scaleY(1);
    }
    90% {
        opacity: 0.05;
    }
    100% {
        opacity: 0.05
    }
}

/* adjusting animation heights for changes in height (e.g. mobile) */
@media (max-width: 504px) {
    #flowAnimation {
        top: 475px;
    }
    #chillAnimation {
        height: 900px;
    }
    #animationContainer::-webkit-scrollbar {
        display: none;
    }
}

